[朱天琦][b_mall_5895]修改创建商品保存时验证方式

--- a/weapp/mall/templates/mall/editor/edit_product.html
+++ b/weapp/mall/templates/mall/editor/edit_product.html
@@ -361,11 +361,13 @@
 </div>
 {% endblock %}
 {% block js %}
-{#防止连续点击保存#}
+<!--    防止连续点击保存    -->
 <script type="text/javascript">
 	$(document).ready(function() {
 		$('#editProduct').submit(function() {
-            $('.xa-submit').attr('disabled','disabled');
+            if (W.validate()) {
+                $('.xa-submit').attr('disabled','disabled');
+			}
 		});
 	});
 </script>
