--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/order_address.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/order_address.html
@@ -56,7 +56,7 @@
     </fieldset>
   </form>
       <div class="xui-btnBox">
-        <a href="javascript:void(0);" data-role="button" class="xui-btn xui-btn-danger xa-submit">保存并使用</a>
+        <input href="javascript:void(0);" type="button" class="xui-btn xui-btn-danger xa-submit" value="保存并使用">
       </div>
     </div>
     <div data-ui-role="swipemask" class="mask">
