--- a/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
+++ b/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
@@ -2617,6 +2617,7 @@ input.ui-input-text, textarea.ui-input-text {
 .xui-address-page .xui-btnBox .xui-btn{
         padding:11px 0;
         width: 100%;
+        height: 45px;
 }
 .xui-address-page .xui-btnBox .xui-btn .ui-btn-text{
     font-size: 1.1em;
