--- a/weapp/apps/customerized_apps/powerme/templates/editor/powermes.html
+++ b/weapp/apps/customerized_apps/powerme/templates/editor/powermes.html
@@ -196,9 +196,7 @@ $(document).ready(function() {
 					},
 					success: function(data) {
 						W.showHint('success', '删除数据成功！');
-						setTimeout(function() {
-							location.reload()
-						}, 500);
+						table.reload();
 					},
 					error: function(response) {
 						W.showHint('error', '删除数据失败，请稍后再试！');
@@ -221,9 +219,7 @@ $(document).ready(function() {
 			},
 			success: function(data) {
 				W.showHint('success', '更新状态成功！');
-				setTimeout(function() {
-					location.reload()
-				}, 500);
+				table.reload();
 			},
 			error: function(response) {
 				W.showHint('error', '更新状态失败，请稍后再试！');
@@ -263,7 +259,6 @@ $(document).ready(function() {
 		var status = $.trim($('[name="status"]').val());
 		var startTime = $.trim($('[name="start_time"]').val());
 		var endTime = $.trim($('[name="end_time"]').val());
-		var table = $('[data-ui-role="advanced-table"]').data('view');
 		table.reload({
 			name: name,
 			status: status,
