--- a/weapp/termite/static/css/apps/powerme_yellow.css
+++ b/weapp/termite/static/css/apps/powerme_yellow.css
@@ -39,8 +39,8 @@
     color: #444444;
 }
 .wui-i-top100-name {
-    color: #9C998E;
+    color: #7a7a7a;
 }
 .wui-i-top100-power {
-    color: #FD6E25;
+    color: #fd5b0e;
 }
