--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -190,6 +190,7 @@
         //监听分享成功事件
         $(document).on("share:success",function(data){
             $('.xa-share').addClass('none');
+            $('body').swipeMask('hide');
             //分享成功后就算该用户参与活动
             W.getApi().call({
                 app: 'm/apps/powerme',
