mod 微助力配置样式

--- a/weapp/static_v2/js/view/workbench_property_view/template.html
+++ b/weapp/static_v2/js/view/workbench_property_view/template.html
@@ -435,7 +435,7 @@
                             {{/if}}
                         </div>
                         {{if field.help}}
-                        <div class="qrcode_help" style="float:right; color: #666;">
+                        <div class="qrcode_help" style="float:right;color: #666;width: 55%;">
                             {{html field.help.replace(/\n/g, "<br/>")}}
                         </div>
                         {{/if}}
