--- a/weapp/termite/static/css/apps/powerme.css
+++ b/weapp/termite/static/css/apps/powerme.css
@@ -162,11 +162,9 @@ hr{
     padding-right: 21px;
 }
 .wui-powerme-container .wui-i-top100-name img {
-  border: 2px solid #ffffff;
-  border-radius: 80px;
-  margin-bottom: -13px;
-  margin-right: 5px;
-  width: 40px;
+    border-radius: 80px;
+    margin: 3px 5px -13px -42px;
+    width: 40px;
 }
 .wui-powerme-container .hide{
     display: none;
