--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -99,12 +99,10 @@
     }
     .xui-attention .xui-twoDimension{
         display: block;
-        height: 150px;
-        left: 72px;
+        height: 180px;
         position: relative;
-        width: 150px;
-        margin-bottom: 10px;
-        margin-top: 10px;
+        width: 180px;
+        margin-left: 50px;
     }
     .xui-twoDimensionBox p {
         display: inline-block;
@@ -147,7 +145,6 @@
                 <p>1.长按二维码关注“</p><p style="color: orangered">{{ mpUserPreviewName }}</p><p>”公众号</p>
             </div>
             <img src="{{ qrcode_url }}" alt="" class="xui-twoDimension">
-            <p></p>
             <div class="xa-attention-tip" style="margin-left:8px;display:none">
                 <p style="color: orangered;">2.关注公众号后即可为好友助力值+1</p>
             </div>
