[朱天琦][f_mall_5806_test]test3

--- a/weapp/webapp/modules/user_center/templates/webapp/default_v3/user_center.html
+++ b/weapp/webapp/modules/user_center/templates/webapp/default_v3/user_center.html
@@ -181,6 +181,17 @@
 {% block js %}
 
 <script>
+    alert(localStorage.ship_infos_token);
+    alert(navigator.userAgent);
+
+if(now.getTime() - lastUpdate > shipInfosConfig.cacheTime){
+    alert('缓存过期');
+}
+if($.cookie('current_token')!=localStorage.ship_infos_token){
+    alert('token不相等');
+}
+
+
 initShipInofs();
 $(document).ready(function(){
     // $('.xa-clickPointCard').click(function(event){
