[朱天琦][f_mall_5806]修复js报错

--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/edit_order.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/edit_order.html
@@ -64,10 +64,10 @@
 
             </fieldset>
             <fieldset class="hidden">
-                <input name="ship_name" type="hidden" value="" >
-                <input name="ship_tel" type="hidden" value="" >
-                <input name="area" class="xa-areaInput" type="hidden" value="" data-area-str="">
-                <input name="ship_address" type="hidden" value="" >
+                <input id="ship_name" name="ship_name" type="hidden" value="" >
+                <input id="ship_tel" name="ship_tel" type="hidden" value="" >
+                <input id="area" name="area" class="xa-areaInput" type="hidden" value="" data-area-str="">
+                <input id="ship_address" name="ship_address" type="hidden" value="" >
 
                 <input id="delivery_plan_id" name="delivery_plan_id" value="{{ delivery_plan_id }}" type="hidden" >
                 <input id="delivery_dates" name="delivery_dates" value="{{ delivery_dates }}" type="hidden">
