--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -144,7 +144,7 @@
             <div class="xa-attention-tip-one" style="margin-left: 8px;margin-top: 32px;">
                 <p>1.长按二维码关注“</p><p style="color: orangered">{{ mpUserPreviewName }}</p><p>”公众号</p>
             </div>
-            <img src="{{ qrcode_url }}" alt="" class="xui-twoDimension">
+            <img src="{{ request.webapp_owner_info.qrcode_img }}" alt="" class="xui-twoDimension">
             <div class="xa-attention-tip" style="margin-left:8px;display:none">
                 <p style="color: orangered;">2.关注公众号后即可为好友助力值+1</p>
             </div>
@@ -171,7 +171,8 @@
     var is_powered = {% if is_powered %}true{% else %}false{% endif %};
     var is_self_page = {% if is_self_page %}true{% else %}false{% endif %};
     var page_owner_name = '{{ page_owner_name|safe }}';
-    var new_qrcode_url = {% if params_qrcode_url %}'{{params_qrcode_url}}'{% else %}'{{qrcode_url}}'{% endif %};
+    var qrcode_url = W.qrcodeUrl;
+    var new_qrcode_url = {% if params_qrcode_url %}'{{params_qrcode_url}}'{% else %}qrcode_url{% endif %};
     $(function(){
         //尝试解决点透事件
         FastClick.attach(document.body);
@@ -260,7 +261,7 @@
             }else{
                 using_msg = '我也要参加';
                 $('.wa-using').text(using_msg).on('click', function(){
-                    $attention.find('img').attr('src','{{qrcode_url}}');
+                    $attention.find('img').attr('src',qrcode_url);
                     $attention.find('.xa-attention-tip').hide();
                     $attention.find('.xa-attention-reply').children().first().html("2.回复：“");
                     openQrMask();
