[朱天琦][f_mall_5923]JS_Analysis

--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -155,8 +155,6 @@
             }
             W.pageTitle = "{{page_title}}";
             W.errorMessage = null;
-            localStorage.setItem('woid',W.webappOwnerId);
-            localStorage.setItem('fmt',W.curRequestMemberToken);
 
             {% if messages %}
             {% for message in messages %}
@@ -247,6 +245,10 @@
             });
         </script>
         {% endif %}
+
+        <script>
+            webStorageProbe();
+        </script>
 
         {% block js %}{% endblock %}
     </body>
