--- a/weapp/termite/static/v3/css/base.css
+++ b/weapp/termite/static/v3/css/base.css
@@ -26,6 +26,7 @@ sub{vertical-align:baseline;}
 legend{color:#000;}
 input,button,textarea,select,optgroup,option{font-style:inherit;font-weight:inherit;}
 input,button,textarea,select{*font-size:100%;}
+input[type=button]{ -webkit-appearance:none; outline:none;}
 textarea{resize:none}
 /*文字排版*/
 .f12{font-size:12px;}
