--- a/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
@@ -38,10 +38,9 @@
             </div>
             <div class="wui-i-rules xa-rules">
                 <div class="wui-i-title">
-                    <div class="wui-i-line"></div>
-                    <div class="wui-i-rules-title-content">
+                    <span class="wui-i-rules-title-content">
                         <i class="wui-i-star"></i><b>活动规则</b><i class="wui-i-star"></i>
-                    </div>
+                    </span>
                 </div>
                 <div class="wui-i-rules-content">
                     {{component.model.rules|safe}}
@@ -49,10 +48,10 @@
             </div>
             <div class="wui-i-states">
                 <div class="wui-i-title">
-                    <div class="wui-i-line"></div>
-                    <div class="wui-i-helper-title-content">
-                        <i class="wui-i-star"></i><b>助力值TOP100</b><i class="wui-i-star"></i></div>
-                    </div>
+                    <span class="wui-i-helper-title-content">
+                        <i class="wui-i-star"></i><b>助力值TOP100</b><i class="wui-i-star"></i>
+                    </span>
+                </div>
                 <ul class="wa-top100">
                     <li class="wui-i-top100-title">
                         <span style="margin-left: 5px">排名</span>
