--- a/weapp/termite/static/css/apps/powerme_orange.css
+++ b/weapp/termite/static/css/apps/powerme_orange.css
@@ -26,8 +26,8 @@
 .wui-i-rules-content {
     color: #fff;
 }
-.wui-powerme-container .wui-i-line{
-    border-bottom: 1px solid #9d3100;
+.wui-powerme-container .wui-i-rules, .wui-powerme-container .wui-i-states{
+    border-top: 1px solid #9d3100;
 }
 .wui-powerme-container .wui-i-rules-title-content,.wui-powerme-container .wui-i-helper-title-content{
     background: #ff7d42;
