--- a/weapp/termite/static/css/apps/powerme_red.css
+++ b/weapp/termite/static/css/apps/powerme_red.css
@@ -26,8 +26,8 @@
 .wui-i-rules-content {
     color: #fff;
 }
-.wui-powerme-container .wui-i-line{
-    border-bottom: 1px solid #6f2e0e;
+.wui-powerme-container .wui-i-rules, .wui-powerme-container .wui-i-states{
+    border-top: 1px solid #6f2e0e;
 }
 .wui-powerme-container .wui-i-rules-title-content,.wui-powerme-container .wui-i-helper-title-content {
     background: #e63041;
