--- a/weapp/termite/static/css/apps/powerme_yellow.css
+++ b/weapp/termite/static/css/apps/powerme_yellow.css
@@ -9,7 +9,7 @@
     padding: 10px 0 50px;
 }
 .wui-powerme-container .wui-i-timing i{
-    background-position: -49px 0;
+    background-position: -45px 0;
 }
 .wui-powerme-container .wui-i-rules .wui-i-star, .wui-powerme-container .wui-i-states .wui-i-star{
     background-position: 9px 3px;
@@ -26,8 +26,8 @@
 .wui-i-rules-content {
     color: #666;
 }
-.wui-powerme-container .wui-i-line{
-    border-bottom: 1px solid #6d2e0d;
+.wui-powerme-container .wui-i-rules, .wui-powerme-container .wui-i-states{
+    border-top: 1px solid #6d2e0d;
 }
 .wui-powerme-container .wui-i-rules-title-content,.wui-powerme-container .wui-i-helper-title-content {
     background: #FEF6C5;
