--- a/weapp/termite/static/v3/css/webapp_default.css
+++ b/weapp/termite/static/v3/css/webapp_default.css
@@ -217,11 +217,11 @@ body.ui-overlay-x .ui-page{
     -o-background-size: 100% 100%; /*opera*/
     background-size: 100% 100%; /*generic*/
 }
-
+/* hrx 2015-11-11 */
 /* horizontal listview 样式 */
 /*listView-x*/
-.xui-hlist{
-    /*max-width:480px;*/
+/*.xui-hlist{
+    max-width:480px;
     width: 100%;
     overflow:hidden;
     margin:0px auto;
@@ -235,8 +235,8 @@ body.ui-overlay-x .ui-page{
     display:inline;
     float:left;
     box-sizing:border-box;
-    -moz-box-sizing:border-box; /* Firefox */
-    -webkit-box-sizing:border-box; /* Safari */
+    -moz-box-sizing:border-box; 
+    -webkit-box-sizing:border-box; 
 }
 .xui-hlist .ui-btn.ui-btn-active{
     -moz-opacity:0.5;
@@ -264,15 +264,15 @@ body.ui-overlay-x .ui-page{
 .xui-hlist-cell-2 .xui-inner-li{
     width:50%;
 }
-/*.xui-hlist-cell-2 .ui-btn:nth-child(2n+1){
+.xui-hlist-cell-2 .ui-btn:nth-child(2n+1){
     clear:left;
-}*/
+}
 .xui-hlist-cell-4 .xui-inner-li{
     width:25%;
 }
 .xui-hlist-cell-4 .xui-inner-li:nth-child(4n+1){
     clear:left;
-}
+}*/
 
 /* css3 箭头 */
 .xui-right-arrow {
