--- a/weapp/weixin2/templates/weixin/mp_user/mp_user_index.html
+++ b/weapp/weixin2/templates/weixin/mp_user/mp_user_index.html
@@ -10,7 +10,7 @@
 </style>
 {% endblock %}
 {% block content-panel %}
-<div class="xui-weixin-unbindAccountPage" style = "margin-top: 42px;">
+<div class="xui-weixin-unbindAccountPage" style = "margin-top: 20px;margin-left: -205px;">
 	<div class="relative">
 		<div class="xa-fansFilterView xui-filterPanel  pr">
 			
