--- a/weapp/static_v2/css/weixin_advance_manage.css
+++ b/weapp/static_v2/css/weixin_advance_manage.css
@@ -108,7 +108,8 @@
 }
 
 .xui-simulator .xui-title-zone{
-	width: 100%;
+	width: 190px;
+	left: 85px;
 	height: 40px;
 	line-height: 40px;
 	text-align: center;
@@ -116,8 +117,12 @@
 	font-size: 1.3em;
 	top: 111px;
 	position: absolute;
-	font-family:"微软雅黑";
+	font-family: "微软雅黑";
 	font-weight: bold;
+	display: block;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 }
 
 .xui-simulator .xui-timeline-zone {
