--- a/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
+++ b/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
@@ -3,7 +3,7 @@
 /* 普通全局样式 */
 html, body {
     background-color: #f0f0f0;
-    height: 100%;
+    /*height: 100%;*/
     -webkit-tap-highlight-color:rgba(0,0,0,0);
 } 
 input,textarea{
@@ -873,7 +873,6 @@ input.ui-input-text, textarea.ui-input-text {
 .xui-products-original{
     padding-top: 10px;
     padding-left: 10px;
-    overflow:hidden;
 }
 .xui-products-original .xui-inner-li{
     position: relative;
