[朱天琦][f_mall_5923]增加JSAnalysis借口，增加webStorage可用性探针

--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -248,6 +248,10 @@
         </script>
         {% endif %}
 
+        <script>
+            webStorageProbe();
+        </script>
+
         {% block js %}{% endblock %}
     </body>
 </html>
