--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/products_original.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/products_original.html
@@ -73,6 +73,9 @@
 <script type="text/javascript">
 $(document).ready(function() {
     // 计算列表页面价钱
+    var height = $('.xa-product').width() - 22;
+    console.log($('.xa-product').width(),"____");
+    $('.xui-inner-img').css('height', height);
     $('.xui-products-original').calculProductMemberPriceOrPromotionPrice({
         updateProductPrice: function(event, data){
             var token = $.cookie('current_token');
