--- a/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
+++ b/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
@@ -873,6 +873,7 @@ input.ui-input-text, textarea.ui-input-text {
 .xui-products-original{
     padding-top: 10px;
     padding-left: 10px;
+    overflow:hidden;
 }
 .xui-products-original .xui-inner-li{
     position: relative;
