--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/products_original.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/products_original.html
@@ -71,6 +71,7 @@
 
 {% block js %}
 <script type="text/javascript">
+var height = $('.xa-product').width() - 22;
 $('.xui-inner-img').css('height', height);
 $(document).ready(function() {
     // 计算列表页面价钱
